Test-136286 Selenium: fix BPL